# SDLProject

./: .gitignore  CMakeLists.txt
SDLProject/: CMakeLists.txt
SDLProject/include/: MandelWindow.hpp  RenderWindow.hpp  SDLProject.h  SDLProject.hpp
SDLProject/src/: MandelWindow.cpp  RenderWindow.cpp  SDLProject.cpp
